# liscopridge

./: .cookiecutter.json  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: check.yaml  pypi.yaml
src/liscopridge/: __init__.py  cache.py  cli.py  server.py  util.py
src/liscopridge/app/: __init__.py  reddit.md  reddit.py  root.py  statshunters.html  statshunters.md  statshunters.py
src/liscopridge/hacks/: fastkml.py
src/liscopridge/templates/: statshunters.html
src/liscopridge/util/: geometry.py
tests/: conftest.py  fixme.md  test_hello.py  test_statshunters.py
tests/app/: test_reddit.py  test_statshunters.py
tests/app/cassettes/test_reddit/: test_subreddit_atom_minscore.yaml
tests/app/cassettes/test_statshunters/: test_activities.yaml  test_cli_tiles_kml.yaml
tests/readme/: config-sample.md  help.md  reddit.md  statshunters.md
tests/util/: test_geometry.py
