[build-system]
requires = [
    "setuptools >= 64.0",
    "setuptools_scm[toml] >= 6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "liscopridge"
dynamic = ["version"]
authors = [{name = "Tomáš Janoušek", email = "tomi@nomi.cz"}]
license = {text = "MIT"}
description = "liskin's collection of protocol bridges"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
urls = {Homepage = "https://github.com/liskin/liscopridge"}
requires-python = "~= 3.8"
dependencies = [
    "bottle",
    "click ~= 8.0",
    "fastkml ~= 1.0a6",
    "importlib-metadata; python_version<'3.10'",
    "importlib-resources; python_version<'3.9'",
    "lxml",
    "mercantile",
    "platformdirs >= 2.1",
    "pygeoif ~= 1.0",
    "requests",
    "requests-cache",
    "shapely",
    "waitress",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
dev = [
    "build >= 0.7",
    "cram",
    "flake8",
    "isort >= 5.0",
    "mypy >= 0.900",
    "twine",
    "types-click",
    "types-requests",
]
test = [
    "boddle",
    "pytest",
    "pytest-recording",
    "vcrpy >= 4.3.1",
    "webtest",
]

[project.scripts]
liscopridge = "liscopridge.server:main"
liscopridge-cli = "liscopridge.cli:main"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.mypy]
python_executable = ".venv/bin/python3"
show_error_codes = true

[tool.flake8]
extend-exclude = ".venv"
max-line-length = "120"

[tool.isort]
profile = "open_stack"

# vim:set et:
