[build-system]
requires = [
    "setuptools >= 64.0",
    "setuptools_scm[toml] >= 6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "liscopridge"
description = "liskin's collection of protocol bridges"
authors = [{name = "Tomáš Janoušek", email = "tomi@nomi.cz"}]
license = {text = "MIT"}
readme = {file="README.md", content-type="text/markdown"}
dynamic = ["version"]
classifiers = [ # https://pypi.org/classifiers/
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
urls = {Homepage = "https://github.com/liskin/liscopridge"}
requires-python = "~= 3.8"
dependencies = [
    "bottle",
    "click ~= 8.0",
    "fastkml ~= 1.0a6",
    "importlib-metadata; python_version<'3.10'",
    "importlib-resources; python_version<'3.9'",
    "lxml",
    "mercantile",
    "platformdirs >= 2.1",
    "pygeoif ~= 1.0",
    "requests",
    "requests-cache",
    "shapely",
    "waitress",
]

[project.optional-dependencies]
dev = [
    "build >= 0.7",
    "cram",
    "flake8",
    "isort >= 5.0",
    "mypy >= 0.900",
    "twine",
    "types-click",
    "types-requests",
]
test = [
    "boddle",
    "pytest",
    "pytest-recording",
    "vcrpy >= 4.3.1",
    "webtest",
]

[project.scripts]
liscopridge = "liscopridge.server:main"
liscopridge-cli = "liscopridge.cli:cli"

[tool.gha-check-distro]
dependencies-apt = [
    "python3-bottle",
    "python3-build",
    "python3-click",
    "python3-cram",
    "python3-fastkml",
    "python3-flake8",
    "python3-importlib-metadata",
    "python3-importlib-resources",
    "python3-isort",
    "python3-lxml",
    "python3-mercantile",
    "python3-multidict",
    "python3-mypy",
    "python3-pip",
    "python3-pip-whl",
    "python3-platformdirs",
    "python3-pytest",
    "python3-requests",
    "python3-requests-cache",
    "python3-shapely",
    "python3-typeshed",
    "python3-vcr",
    "python3-venv",
    "python3-waitress",
    "python3-webtest",
    "python3-yarl",
    "twine",
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.mypy]
python_executable = ".venv/bin/python3"
show_error_codes = true

[tool.isort]
profile = "open_stack"

[tool.ruff]
line-length = 120

# vim:set et:
