[metadata]
name = liscopridge
url = https://github.com/liskin/liscopridge

author = Tomáš Janoušek
author_email = tomi@nomi.cz
license = MIT

description = "liskin's collection of protocol bridges"
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = ~= 3.7
install_requires =
    bottle
    requests
    requests_oauthlib
    waitress
tests_require =

[options.extras_require]
dev =
    flake8
    isort
    mypy
    pep517
    python-language-server
    twine
test =
    pytest
    pytest-recording

[options.packages.find]
where=src

[options.package_data]
* =
    py.typed

[options.entry_points]
console_scripts =
    liscopridge = liscopridge.server:main

[mypy]
python_executable = .venv/bin/python3
show_error_codes = True

[flake8]
extend-exclude = .venv
max-line-length = 120

# vim:set et:
