[metadata]
name = liscopridge
url = https://github.com/liskin/liscopridge

author = Tomáš Janoušek
author_email = tomi@nomi.cz
license = MIT

description = "liskin's collection of protocol bridges"
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Utilities

[options]
package_dir =
    =src
packages = find:
python_requires = ~= 3.7
install_requires =
    appdirs
    bottle
    click ~= 7.1
    fastkml
    lxml
    mercantile
    requests
    requests-cache
    shapely >= 1.6rc9  # FIXME: drop once 1.8 is released; https://github.com/Toblerity/Shapely/issues/1198
    waitress
tests_require =

[options.extras_require]
dev =
    build >= 0.7
    cram
    flake8
    isort >= 5.0
    mypy >= 0.730
    twine
    types-click
    types-requests
    types-setuptools
test =
    boddle
    pytest
    pytest-recording
    webtest

[options.packages.find]
where=src

[options.package_data]
* =
    py.typed
    *.html
    *.tpl

[options.entry_points]
console_scripts =
    liscopridge = liscopridge.server:main

[mypy]
python_executable = .venv/bin/python3
show_error_codes = True

[flake8]
extend-exclude = .venv
max-line-length = 120

# vim:set et:
